[package]
name = "evm-recover"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.15", default-features = false }
alloy-rlp = "0.3.11"
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
lz4_flex = "0.11.3"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.5", default-features = false }
